--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bot-wa",
     "multi-device"
   ],
-  "author": "China",
+  "author": "Zam",
   "license": "MIT",
   "engines": {
     "node": ">=20.0.0"
@@ -24,7 +24,7 @@
     "axios": "^0.24.0",
     "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
     "lurcloud": "github:AzamiJs/lurcloud",
-    "@whiskeysockets/baileys": "github:EdderBot02/bail",
+    "@whiskeysockets/baileys": "github:gatanina-li/baileys",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
