--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChinaMitzuki-Lite",
+  "name": "Mitsuki-Lite",
   "version": "1.0.0",
   "description": "Simple WhatsApp Bot",
   "main": "start.js",
